# MazeRunner

./: CMakeLists.txt
resources/: 10x10MAZE.txtt  12x8MAZE.txtt  20x20MAZE.txtt  8x12MAZE.ttxt
src/: Map.cpp  Map.h  Menu.cpp  Menu.h  main.cpp
